<resources>
    <string name="app_name">良密</string>
    <string name="tip_no_data">暂无数据</string>
    <string name="input_password">请输入密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="next">下一步</string>
    <string name="password_not_match">两次密码不一致</string>
    <string name="wrong_password">密码错误</string>
    <string name="password">密码</string>
    <string name="invisible_password">••••••••••••</string>
    <string name="title">标题</string>
    <string name="account">账户</string>
    <string name="uppercase">大写</string>
    <string name="lowercase">小写</string>
    <string name="numbers">数字</string>
    <string name="symbols">符号</string>
    <string name="copy_password">复制密码</string>
    <string name="give_me_a_password">来个密码</string>
    <string name="settings">设置</string>
    <string name="remark">备注</string>
    <string name="new_password">来新的账户了</string>
    <string name="save">保存</string>
    <string name="social">社交</string>
    <string name="finance">财务</string>
    <string name="game">游戏</string>
    <string name="education">教育</string>
    <string name="entertainment">娱乐</string>
    <string name="lifestyle">生活</string>
    <string name="work_or_study">工作学习</string>
    <string name="productivity">效率</string>
    <string name="utilities">工具</string>
    <string name="other">其他</string>
</resources>
