<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordGeneratorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/give_me_a_password" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/textBlack"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/picker_length"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="*8i7*AGtMOLh" />


    <NumberPicker
        android:id="@+id/picker_length"
        android:layout_width="wrap_content"
        android:layout_height="96dp"

        android:foregroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cb_uppercase"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/cb_uppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/uppercase"
        app:layout_constraintEnd_toStartOf="@id/cb_lowercase"
        app:layout_constraintStart_toEndOf="@id/picker_length"
        app:layout_constraintTop_toTopOf="@id/picker_length" />


    <CheckBox
        android:id="@+id/cb_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/lowercase"
        app:layout_constraintBottom_toBottomOf="@id/cb_uppercase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cb_uppercase" />

    <CheckBox
        android:id="@+id/cb_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/numbers"
        app:layout_constraintBottom_toBottomOf="@id/picker_length"
        app:layout_constraintStart_toStartOf="@id/cb_uppercase" />

    <CheckBox
        android:id="@+id/cb_symbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/symbols"
        app:layout_constraintStart_toStartOf="@id/cb_lowercase"
        app:layout_constraintTop_toTopOf="@id/cb_numbers" />

    <ImageView
        android:id="@+id/iv_renew"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_autorenew_48"
        app:layout_constraintBottom_toTopOf="@id/btn_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picker_length"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btn_copy"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_accent_round_16"
        android:backgroundTint="@color/colorAccent"
        android:minHeight="48dp"
        android:text="@string/copy_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picker_length"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>